# ForeverAloneCraft

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Roadmap.md  ai-azerothcore.md
data/sql/updates/pending_db_auth/: rev_1745376000.sql  rev_1745456000_bothouse_accounts.sql
data/sql/updates/pending_db_characters/: rev_1745376001.sql  rev_1745456001_bothouse_characters.sql  rev_1745540000_bot_profile_slots.sql
modules/mod-living-world/: mod-living-world.cmake
modules/mod-living-world/conf/: mod-living-world.conf.dist
modules/mod-living-world/src/ai/: CompanionAI.cpp  CompanionAI.h
modules/mod-living-world/src/integration/: AccountAltRuntimeRepository.h  AzerothWorldFacade.h  BotAccountPoolRepository.h  BotSessionFactory.cpp  BotSessionFactory.h  CharacterBankSyncRepository.h  CharacterCloneMaterializer.h  CharacterEquipmentSyncRepository.h  CharacterInventorySyncRepository.h  CharacterItemSnapshotRepository.h  CharacterNameLeaseRepository.h  CharacterProgressSnapshotRepository.h  CharacterProgressSyncRepository.h  RosterRepository.h  SqlAccountAltRuntimeRepository.cpp  SqlAccountAltRuntimeRepository.h  SqlBotAccountPoolRepository.cpp  SqlBotAccountPoolRepository.h  SqlCharacterBankSyncRepository.cpp  SqlCharacterBankSyncRepository.h  SqlCharacterCloneMaterializer.cpp  SqlCharacterCloneMaterializer.h  SqlCharacterEquipmentSyncRepository.cpp  SqlCharacterEquipmentSyncRepository.h  SqlCharacterInventorySyncRepository.cpp  SqlCharacterInventorySyncRepository.h  SqlCharacterItemSnapshotRepository.cpp  SqlCharacterItemSnapshotRepository.h  SqlCharacterNameLeaseRepository.cpp  SqlCharacterNameLeaseRepository.h  SqlCharacterProgressSnapshotRepository.cpp  SqlCharacterProgressSnapshotRepository.h  SqlCharacterProgressSyncRepository.cpp  SqlCharacterProgressSyncRepository.h  WorldCommitAction.h  WorldReadContext.h
modules/mod-living-world/src/loader/: mod_living_world_loader.cpp
modules/mod-living-world/src/model/: AccountAltRuntime.h  BotAbstractState.h  BotProfile.h  BotSpawnContext.h  CharacterItemSnapshot.h  ControllableBotProfile.h  EncounterRecord.h  (+8 more)
modules/mod-living-world/test/: AccountAltBankSyncExecutorTest.cpp  AccountAltDismissalServiceTest.cpp  AccountAltEquipmentSyncExecutorTest.cpp  AccountAltInventorySyncExecutorTest.cpp  AccountAltItemRecoveryServiceTest.cpp  AccountAltRecoveryServiceTest.cpp  AccountAltRuntimeCoordinatorTest.cpp  AccountAltRuntimeServiceTest.cpp  AccountAltSanityCheckerTest.cpp  AccountAltStartupRecoveryServiceTest.cpp  CharacterItemSanityCheckerTest.cpp  CharacterItemSnapshotClassifierTest.cpp  LivingWorldCommandGrammarTest.cpp  PartyBotServiceTest.cpp  SimplePartyRosterPlannerTest.cpp  SimpleZonePopulationPlannerTest.cpp
scripts/: deploy-local.sh
src/test/: CMakeLists.txt
src/test/common/Configuration/: Config.cpp
src/test/mocks/: WorldMock.h
src/test/server/game/Events/: HolidayDateCalculatorTest.cpp
(+59 files in other folders)
